# mynumber

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  index.html  search-index.js
benches/: verify_numbers.rs
implementors/core/fmt/: trait.Debug.js
mynumber/: enum.VerifyError.html  fn.verify.html  index.html  sidebar-items.js
mynumber/corporate/: fn.verify.html  index.html  sidebar-items.js
mynumber/individual/: fn.verify.html  index.html  sidebar-items.js
src/: corporate.rs  individual.rs  lib.rs
src/mynumber/: corporate.rs.html  individual.rs.html  lib.rs.html
tests/: corporate.rs  individual.rs  mynumber.rs
